Обновлено руководство по callouts в Markdown: изменен синтаксис на GitHub-style, добавлены примеры использования и инструкции по настройке в VSCode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -141,19 +141,12 @@
 		"preview": {
 			"breaks": true, // Одиночные переносы строк отображаются как <br>
 			"typographer": true // Включает типографские улучшения текста
-		}
-	},
-
-	"markdown-preview-enhanced": {
-		"enableTypographer": true,
-		"previewTheme": "github-dark.css",
-		"frontMatterRender": true,
-		"enableScriptExecution": true,
-		"style": "github-dark.css"
+		},
+		"extension.preview.autoShowPreviewToSide": true // Автоматически открывать предпросмотр Markdown сбоку
 	},
 
 	"[markdown]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode", // Использует Prettier для форматирования Markdown файлов
+		"editor.defaultFormatter": "yzhang.markdown-all-in-one", // Использует Prettier для форматирования Markdown файлов
 		"editor.formatOnSave": true, // Автоматическое форматирование при сохранении
 		"editor.wordWrap": "on", // Включает перенос строк для удобства чтения
 		"editor.renderWhitespace": "all", // Показывает символы пробелов и табуляции
