Добавлено свойство workbench.iconTheme в настройки для улучшения пользовательского интерфейса.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -62,5 +62,6 @@
 	"scm": {
 		"inputFontSize": 14
 	},
-	"git.openRepositoryInParentFolders": "never"
+	"git.openRepositoryInParentFolders": "never",
+	"workbench.iconTheme": "vscode-icons"
 }
