Добавлена и настроена интеграция с AI-ассистентом Cody от Sourcegraph, включая локализацию на русский язык и автоматическую генерацию commit-сообщений.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -63,5 +63,6 @@
 		"inputFontSize": 14
 	},
 	"git.openRepositoryInParentFolders": "never",
-	"workbench.iconTheme": "vscode-icons"
+	"workbench.iconTheme": "vscode-icons",
+	"editor.inlineSuggest.suppressSuggestions": true
 }
