Конфигурация: Расширены настройки AI-ассистента Cody
Добавлены подробные настройки для Cody, включая инструкции для чата и редактирования кода на русском языке, генерацию commit-сообщений, автодополнение, действия с кодом, линзы команд, отладку, телеметрию, работу с кодовой базой и производительность.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -221,31 +221,166 @@
 
 	// Настройки для AI-ассистента Cody от Sourcegraph
 	"cody": {
-		// Настройки чата с Cody
+		// ========== НАСТРОЙКИ ЧАТА ==========
 		"chat": {
-			// Предварительная инструкция для чата - задает поведение ассистента на русском языке
-			"preInstruction": "Ты - русскоязычный AI-ассистент для программирования. Всегда отвечай на русском языке. При анализе кода: 1) Объясняй логику на русском 2) Комментарии к коду пиши на русском 3) Названия переменных/функций оставляй на английском 4) Сообщения об ошибках переводи и объясняй на русском 5) Commit сообщения генерируй на русском в формате 'действие: описание'",
-			// Включает предложения дополнительных вопросов после ответа
-			"followups": "on"
+			// Предварительная инструкция определяет базовое поведение Cody в чате
+			// Эта инструкция отправляется с каждым запросом как системное сообщение
+			// Определяет язык ответов, стиль комментирования и форматирование
+			"preInstruction": "Ты - русскоязычный AI-ассистент для программирования. Всегда отвечай на русском языке. При анализе кода: 1) Объясняй логику на русском 2) Комментарии к коду пиши на русском 3) Названия переменных/функций оставляй на английском 4) Сообщения об ошибках переводи и объясняй на русском 5) Commit сообщения генерируй на русском в формате 'действие: описание' 6) Используй примеры кода с русскими комментариями 7) При рефакторинге объясняй причины изменений",
+
+			// Включает автоматические предложения дополнительных вопросов после каждого ответа
+			// Помогает продолжить диалог и углубиться в тему
+			// Варианты: "on" | "off" | "auto"
+			"followups": "on",
+
+			// Настройки истории чата - сохраняет контекст между сессиями
+			"history": {
+				// Включает сохранение истории чата локально
+				// Позволяет Cody помнить предыдущие разговоры в рамках проекта
+				"enabled": true,
+				// Максимальное количество сохраняемых сообщений (необязательно)
+				"maxMessages": 100
+			}
 		},
-		// Настройки для редактирования кода через Cody
+
+		// ========== НАСТРОЙКИ РЕДАКТИРОВАНИЯ КОДА ==========
 		"edit": {
-			// Инструкция для режима редактирования - как добавлять комментарии и объяснения
-			"preInstruction": "При редактировании кода: добавляй русские комментарии для сложной логики, объясняй изменения на русском языке, сохраняй английские названия для переменных и функций."
+			// Инструкция специально для режима редактирования кода
+			// Применяется когда Cody предлагает изменения в существующем коде
+			"preInstruction": "При редактировании кода: добавляй русские комментарии для сложной логики, объясняй изменения на русском языке, сохраняй английские названия для переменных и функций. Следуй принципам чистого кода и добавляй JSDoc комментарии для функций.",
+
+			// Автоматическое принятие простых изменений без подтверждения
+			// false = всегда спрашивать подтверждение (безопаснее)
+			// true = автоматически применять очевидные исправления
+			"autoAccept": false,
+
+			// Показывать diff (различия) перед применением изменений
+			"showDiff": true
 		},
-		// Экспериментальная функция генерации commit сообщений
+
+		// ========== ГЕНЕРАЦИЯ COMMIT СООБЩЕНИЙ ==========
 		"experimental.commitMessage": {
-			// Включает автоматическую генерацию commit сообщений
+			// Включает AI-генерацию commit сообщений на основе изменений в git
+			// Анализирует diff и предлагает осмысленное описание
 			"enabled": true,
-			// Инструкция для генерации commit сообщений на русском языке с определенным форматом
-			"preInstruction": "Генерируй commit сообщения только на русском языке. Формат: 'действие: краткое описание изменений'. Примеры действий: добавить, исправить, обновить, удалить, рефакторинг, оптимизация, документация, тесты, стили. Описание должно быть кратким но информативным."
+
+			// Специальная инструкция для генерации commit сообщений
+			// Определяет формат, стиль и язык сообщений
+			"preInstruction": "Генерируй commit сообщения только на русском языке. Формат: 'тип: краткое описание изменений'. Типы: добавить, исправить, обновить, удалить, рефакторинг, оптимизация, документация, тесты, стили, конфигурация. Описание должно быть кратким но информативным. Максимум 50 символов для заголовка.",
+
+			// Автоматически предлагать commit сообщение при коммите
+			"autoSuggest": true
 		},
-		// Включает автодополнение кода с помощью AI
-		"autocomplete.enabled": true,
-		// Включает предложения действий с кодом (code actions)
+
+		// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
+		"autocomplete": {
+			// Главный переключатель автодополнения кода
+			"enabled": true,
+
+			// Настройки для конкретных языков программирования
+			"languages": {
+				"*": true, // Включено для всех языков по умолчанию
+				"plaintext": false, // Отключено для обычного текста
+				"markdown": false, // Отключено для Markdown файлов
+				"json": true, // Включено для JSON
+				"typescript": true, // Включено для TypeScript
+				"javascript": true // Включено для JavaScript
+			},
+
+			// Задержка в миллисекундах перед показом предложений
+			// Меньше = быстрее отклик, но больше запросов к серверу
+			// Больше = меньше нагрузка, но медленнее отклик
+			"debounceInterval": 75,
+
+			// Максимальное количество предложений автодополнения
+			// Меньше = быстрее загрузка, больше = больше вариантов
+			"maxItems": 3,
+
+			// Минимальная длина текста для начала автодополнения
+			"minTriggerLength": 2
+		},
+
+		// ========== ДЕЙСТВИЯ С КОДОМ ==========
+		// Включает предложения действий с кодом (рефакторинг, исправления)
+		// Появляются как лампочки в редакторе при наведении на код
 		"codeActions.enabled": true,
-		// Показывает линзы команд в редакторе для быстрого доступа к функциям Cody
-		"commandCodeLenses": true
+
+		// ========== ЛИНЗЫ КОМАНД ==========
+		// Показывает интерактивные ссылки над функциями и классами
+		// Позволяет быстро вызвать Cody для объяснения или рефакторинга
+		"commandCodeLenses": true,
+
+		// ========== ОТЛАДКА И ДИАГНОСТИКА ==========
+		"debug": {
+			// Включает режим отладки для диагностики проблем
+			// Полезно если Cody работает некорректно
+			"enabled": false,
+
+			// Подробное логирование всех операций
+			// Создает много логов - использовать только при необходимости
+			"verbose": false, // НЕ true, чтобы избежать спама
+
+			// Путь для сохранения логов отладки (необязательно)
+			"logPath": "./cody-debug.log"
+		},
+
+		// ========== ПРИВАТНОСТЬ ==========
+		"telemetry": {
+			// Уровень сбора телеметрии
+			// "off" = полностью отключено (соответствует вашим настройкам)
+			// "basic" = только основная статистика
+			// "full" = полная телеметрия
+			"level": "off"
+		},
+
+		// ========== РАБОТА С КОДОВОЙ БАЗОЙ ==========
+		// !WARH: эта секция приводит к бесконечной индексации
+		// "codebase": {
+		// 	"indexing": {
+		// 		// Включает локальную индексацию проекта для лучшего понимания контекста
+		// 		// Cody будет анализировать структуру проекта и связи между файлами
+		// 		"enabled": true,
+		// 		// Файлы и папки для исключения из индексации
+		// 		"exclude": [
+		// 			"**/*", // Исключить все
+		// 			"!*.ts", // Включить только TypeScript файлы
+		// 			"!*.js", // И JavaScript файлы
+		// 			"!package.json"
+		// 		],
+		// 		// Максимальный размер файла для индексации (в байтах)
+		// 		"maxFileSize": 10240 // 10KB
+		// 	}
+		// },
+
+		// ========== ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ ==========
+		"experimental": {
+			// Улучшенное понимание контекста кода
+			// Использует более продвинутые алгоритмы анализа
+			"enhancedContext": true,
+
+			// Предложения на основе истории использования
+			// Учитывает ваши предыдущие паттерны кодирования
+			"historySuggestions": true,
+
+			// Интеграция с системой контроля версий
+			// Анализирует git историю для лучших предложений
+			"gitIntegration": true,
+
+			// Кэширование ответов для ускорения работы
+			"responseCache": true
+		},
+
+		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
+		"performance": {
+			// Максимальное время ожидания ответа от сервера (в миллисекундах)
+			"timeout": 10000,
+
+			// Максимальное количество одновременных запросов
+			"maxConcurrentRequests": 3,
+
+			// Размер кэша для хранения ответов
+			"cacheSize": 100
+		}
 	},
 
 	"workbench.iconTheme": "vscode-icons",
