Конфигурация: Добавлены настройки для AI-ассистента AMP от Sourcegraph
Добавлены настройки для AI-ассистента AMP от Sourcegraph, включающие URL сервиса и уровень масштабирования интерфейса. Это позволяет настроить подключение к сервису AMP и оптимизировать отображение интерфейса в соответствии с потребностями пользователя.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -384,5 +384,15 @@
 	},
 
 	"workbench.iconTheme": "vscode-icons",
-	"editor.inlineSuggest.suppressSuggestions": true
+	"editor.inlineSuggest.suppressSuggestions": true,
+
+	// Настройки для AI-ассистента AMP от Sourcegraph
+  "amp": {
+		// URL для AMP сервиса
+		"url": "https://ampcode.com/",
+		// Уровень масштабирования интерфейса
+		"ui": {
+			"zoomLevel": 1.2
+		}
+	}
 }
