Конфигурация: Включена многорядная обертка вкладок редактора VS Code
Включена настройка `editor.wrapTabs` в `settings.json`, чтобы вкладки открытых файлов отображались в несколько рядов, если их количество превышает ширину редактора.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -20,7 +20,8 @@
 		"editor": {
 			"empty": {
 				"hint": "hidden"
-			}
+			},
+			"wrapTabs": true // чтобы отображать вкладки открытых файлов в несколько рядов
 		}
 	},
 
