рефакторинг: перенос настроек Cody в CODY_CONTEXT.md
Перенесены основные настройки AI-ассистента Cody из `settings.json` в отдельный файл `CODY_CONTEXT.md` для улучшения читаемости, версионирования и разделения контекстных инструкций от технических настроек VS Code.

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -220,59 +220,22 @@
 		}
 	},
 
-	// Настройки для AI-ассистента Cody от Sourcegraph
+	/*
+		Настройки для AI-ассистента Cody от Sourcegraph
+		
+		ВАЖНО: Часть настроек перенесена в файл `./CODY_CONTEXT.md`
+		
+		Причины разделения:
+		1. settings.json - технические настройки VS Code (автодополнение, интерфейс, производительность)
+		2. CODY_CONTEXT.md - контекстные инструкции и правила работы (стиль кода, комментарии, commit сообщения)
+		
+		Преимущества такого подхода:
+		- Упрощение конфигурации VS Code (меньше строк в settings.json)
+		- Лучшая читаемость инструкций в отдельном Markdown файле
+		- Возможность версионирования правил работы с кодом
+		- Разделение технических настроек и бизнес-логики
+	*/
 	"cody": {
-		// ========== НАСТРОЙКИ ЧАТА ==========
-		"chat": {
-			// Предварительная инструкция определяет базовое поведение Cody в чате
-			// Эта инструкция отправляется с каждым запросом как системное сообщение
-			// Определяет язык ответов, стиль комментирования и форматирование
-			"preInstruction": "Ты - русскоязычный AI-ассистент для программирования. Всегда отвечай на русском языке. При анализе кода: 1) Объясняй логику на русском 2) Комментарии к коду пиши на русском 3) Названия переменных/функций оставляй на английском 4) Сообщения об ошибках переводи и объясняй на русском 5) Commit сообщения генерируй на русском в формате 'действие: описание' 6) Используй примеры кода с русскими комментариями 7) При рефакторинге объясняй причины изменений",
-
-			// Включает автоматические предложения дополнительных вопросов после каждого ответа
-			// Помогает продолжить диалог и углубиться в тему
-			// Варианты: "on" | "off" | "auto"
-			"followups": "on",
-
-			// Настройки истории чата - сохраняет контекст между сессиями
-			"history": {
-				// Включает сохранение истории чата локально
-				// Позволяет Cody помнить предыдущие разговоры в рамках проекта
-				"enabled": true,
-				// Максимальное количество сохраняемых сообщений (необязательно)
-				"maxMessages": 100
-			}
-		},
-
-		// ========== НАСТРОЙКИ РЕДАКТИРОВАНИЯ КОДА ==========
-		"edit": {
-			// Инструкция специально для режима редактирования кода
-			// Применяется когда Cody предлагает изменения в существующем коде
-			"preInstruction": "При редактировании кода: добавляй русские комментарии для сложной логики, объясняй изменения на русском языке, сохраняй английские названия для переменных и функций. Следуй принципам чистого кода и добавляй JSDoc комментарии для функций.",
-
-			// Автоматическое принятие простых изменений без подтверждения
-			// false = всегда спрашивать подтверждение (безопаснее)
-			// true = автоматически применять очевидные исправления
-			"autoAccept": false,
-
-			// Показывать diff (различия) перед применением изменений
-			"showDiff": true
-		},
-
-		// ========== ГЕНЕРАЦИЯ COMMIT СООБЩЕНИЙ ==========
-		"experimental.commitMessage": {
-			// Включает AI-генерацию commit сообщений на основе изменений в git
-			// Анализирует diff и предлагает осмысленное описание
-			"enabled": true,
-
-			// Специальная инструкция для генерации commit сообщений
-			// Определяет формат, стиль и язык сообщений
-			"preInstruction": "Генерируй commit сообщения только на русском языке. Формат: 'тип: краткое описание изменений'. Типы: добавить, исправить, обновить, удалить, рефакторинг, оптимизация, документация, тесты, стили, конфигурация. Описание должно быть кратким но информативным. Максимум 50 символов для заголовка.",
-
-			// Автоматически предлагать commit сообщение при коммите
-			"autoSuggest": true
-		},
-
 		// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
 		"autocomplete": {
 			// Главный переключатель автодополнения кода
@@ -311,18 +274,16 @@
 		// Позволяет быстро вызвать Cody для объяснения или рефакторинга
 		"commandCodeLenses": true,
 
-		// ========== ОТЛАДКА И ДИАГНОСТИКА ==========
-		"debug": {
-			// Включает режим отладки для диагностики проблем
-			// Полезно если Cody работает некорректно
-			"enabled": false,
+		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
+		"performance": {
+			// Максимальное время ожидания ответа от сервера (в миллисекундах)
+			"timeout": 10000,
 
-			// Подробное логирование всех операций
-			// Создает много логов - использовать только при необходимости
-			"verbose": false, // НЕ true, чтобы избежать спама
+			// Максимальное количество одновременных запросов
+			"maxConcurrentRequests": 3,
 
-			// Путь для сохранения логов отладки (необязательно)
-			"logPath": "./cody-debug.log"
+			// Размер кэша для хранения ответов
+			"cacheSize": 100
 		},
 
 		// ========== ПРИВАТНОСТЬ ==========
@@ -334,24 +295,16 @@
 			"level": "off"
 		},
 
-		// ========== РАБОТА С КОДОВОЙ БАЗОЙ ==========
-		// !WARH: эта секция приводит к бесконечной индексации
-		// "codebase": {
-		// 	"indexing": {
-		// 		// Включает локальную индексацию проекта для лучшего понимания контекста
-		// 		// Cody будет анализировать структуру проекта и связи между файлами
-		// 		"enabled": true,
-		// 		// Файлы и папки для исключения из индексации
-		// 		"exclude": [
-		// 			"**/*", // Исключить все
-		// 			"!*.ts", // Включить только TypeScript файлы
-		// 			"!*.js", // И JavaScript файлы
-		// 			"!package.json"
-		// 		],
-		// 		// Максимальный размер файла для индексации (в байтах)
-		// 		"maxFileSize": 10240 // 10KB
-		// 	}
-		// },
+		// ========== ОТЛАДКА И ДИАГНОСТИКА ==========
+		"debug": {
+			// Включает режим отладки для диагностики проблем
+			// Полезно если Cody работает некорректно
+			"enabled": false,
+
+			// Подробное логирование всех операций
+			// Создает много логов - использовать только при необходимости
+			"verbose": false
+		},
 
 		// ========== ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ ==========
 		"experimental": {
@@ -369,18 +322,6 @@
 
 			// Кэширование ответов для ускорения работы
 			"responseCache": true
-		},
-
-		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
-		"performance": {
-			// Максимальное время ожидания ответа от сервера (в миллисекундах)
-			"timeout": 10000,
-
-			// Максимальное количество одновременных запросов
-			"maxConcurrentRequests": 3,
-
-			// Размер кэша для хранения ответов
-			"cacheSize": 100
 		}
 	},
 
@@ -388,12 +329,14 @@
 	"editor.inlineSuggest.suppressSuggestions": true,
 
 	// Настройки для AI-ассистента AMP от Sourcegraph
-  "amp": {
+	"amp": {
 		// URL для AMP сервиса
 		"url": "https://ampcode.com/",
 		// Уровень масштабирования интерфейса
 		"ui": {
 			"zoomLevel": 1.2
 		}
-	}
+	},
+	"amp.notifications.enabled": false,
+	"amp.commands.allowlist": ["timeout"]
 }
