Настроить генерацию commit сообщений в Cody
- Отключить генерацию commit сообщений в GitHub Copilot
- Добавить подробные настройки chat.commitMessage в Cody
- Обновить документацию с правилами русских commit сообщений
- Добавить критически важные правила сохранения комментариев

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -119,11 +119,9 @@
 					"enabled": false
 				},
 				"commitMessageGeneration": {
-					"instructions": [
-						"Генерируй commit сообщения на русском языке",
-						"Используй формат: 'действие: описание'",
-						"Будь кратким но информативным"
-					]
+					// ОТКЛЮЧАЕМ генерацию commit сообщений в Copilot, чтобы использовать Cody
+					"enabled": false
+					// Удаляем старые инструкции, так как теперь используем Cody
 				}
 			},
 			"enable": {
@@ -273,6 +271,36 @@
 		// Показывает интерактивные ссылки над функциями и классами
 		// Позволяет быстро вызвать Cody для объяснения или рефакторинга
 		"commandCodeLenses": true,
+
+		// ========== НАСТРОЙКИ ЧАТА И COMMIT СООБЩЕНИЙ ==========
+		"chat": {
+			// Язык интерфейса чата
+			"locale": "ru",
+
+			// Настройки генерации commit сообщений
+			"commitMessage": {
+				// Основной язык для сообщений
+				"language": "ru",
+
+				// Инструкции для генерации commit сообщений
+				"instructions": [
+					"Генерируй commit сообщения ТОЛЬКО на русском языке в повелительном наклонении (инфинитив)",
+					"Формат: 'Действие описание' (БЕЗ двоеточия, БЕЗ точки в конце)",
+					"Используй действия: добавить, исправить, обновить, удалить, рефакторить, оптимизировать, документировать, тестировать, настроить, стилизовать",
+					"Примеры: 'Добавить функцию валидации email', 'Исправить ошибку деления на ноль'",
+					"НЕ используй префиксы feat:, fix:, docs:, chore:",
+					"НЕ используй повелительное наклонение с 'й' (добавь, исправь)",
+					"НЕ используй прошедшее время (добавил, исправил)",
+					"Максимум 50 символов для заголовка"
+				]
+			},
+
+			// Максимальное количество сообщений в истории чата
+			"maxHistoryLength": 100,
+
+			// Включить дополнительные вопросы после ответов
+			"followUpQuestions": true
+		},
 
 		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
 		"performance": {
