Настроить интеграцию Cody для генерации commit сообщений
Перенести правила для создания commit сообщений из CODY_CONTEXT.md в settings.json так как функция "Generate Commit Message" в VS Code работает через специальный API и имеет ограниченный контекст - только: settings.json["cody.chat.commitMessage"]

- Добавлена конфигурация для интеграции Cody в VS Code для автоматической генерации commit сообщений
- Включены правила генерации на русском языке в повелительном наклонении
- Настроены параметры для анализа изменений, использования контекстных файлов и ограничения длины сообщения
- Добавлены инструкции для Cody по форматированию сообщений и использованию ключевых слов
- Включена интеграция с Git для использования контекстных файлов и правил проекта

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -47,8 +47,26 @@
 		}
 	},
 
+	// Настройки Git в VS Code
+	"git": {
+		"enableCommitSigning": false,
+		"confirmSync": false,
+		"autofetch": true,
+		"fetchOnPull": true,
+		"commitMessageGeneration": {
+			"enabled": true
+		}
+	},
+
+	// Настройки SCM (Source Control Management)
 	"scm": {
-		"inputFontSize": 14
+		"inputFontSize": 14,
+		"defaultViewMode": "tree",
+		"alwaysShowProviders": true,
+		"commitMessageGeneration": {
+			"provider": "cody",
+			"useProjectContext": true
+		}
 	},
 
 	"editor": {
@@ -284,22 +302,76 @@
 
 				// Инструкции для генерации commit сообщений
 				"instructions": [
+					// === ОСНОВНЫЕ ПРАВИЛА ===
 					"Генерируй commit сообщения ТОЛЬКО на русском языке в повелительном наклонении (инфинитив)",
 					"Формат: 'Действие описание' (БЕЗ двоеточия, БЕЗ точки в конце)",
+					"Максимум 50 символов для заголовка",
+
+					// === ДЕЙСТВИЯ ===
 					"Используй действия: добавить, исправить, обновить, удалить, рефакторить, оптимизировать, документировать, тестировать, настроить, стилизовать",
-					"Примеры: 'Добавить функцию валидации email', 'Исправить ошибку деления на ноль'",
+
+					// === ЗАПРЕТЫ ===
 					"НЕ используй префиксы feat:, fix:, docs:, chore:",
 					"НЕ используй повелительное наклонение с 'й' (добавь, исправь)",
 					"НЕ используй прошедшее время (добавил, исправил)",
-					"Максимум 50 символов для заголовка"
-				]
+
+					// === АНАЛИЗ ИЗМЕНЕНИЙ ===
+					"Анализируй git diff и структуру проекта для понимания технологического стека",
+					"Адаптируй терминологию под используемые технологии",
+					"Для новых файлов: 'Добавить [тип] [название]'",
+					"Для исправлений: 'Исправить [проблему] в [компоненте]'",
+					"Для рефакторинга: 'Рефакторить [компонент] для [цели]'",
+
+					// === ТЕХНОЛОГИИ (примеры) ===
+					"Для React/React Native: 'Добавить компонент UserProfile'",
+					"Для API: 'Исправить валидацию в POST /users'",
+					"Для базы данных: 'Добавить миграцию для таблицы users'",
+					"Для конфигурации: 'Настроить webpack для production'",
+					"Для стилей: 'Обновить CSS для мобильных устройств'",
+
+					// === ПРИМЕРЫ ===
+					"Примеры: 'Добавить валидацию email', 'Исправить ошибку деления на ноль', 'Обновить зависимости проекта'"
+				],
+
+				// Автоматически включать контекстные файлы при генерации commit
+				"includeContext": true,
+
+				// Файлы с дополнительными инструкциями
+				"contextFiles": ["./CODY_CONTEXT.md", "./.cody/instructions.md"],
+
+				// Анализировать изменения в коде для лучшего понимания
+				"analyzeChanges": true,
+
+				// Максимальная длина сообщения
+				"maxLength": 50,
+
+				// Включить детальное описание (если нужно)
+				"includeDescription": false
 			},
 
 			// Максимальное количество сообщений в истории чата
 			"maxHistoryLength": 100,
 
 			// Включить дополнительные вопросы после ответов
-			"followUpQuestions": true
+			"followUpQuestions": true,
+
+			// Автоматически загружать контекстные инструкции
+			"autoLoadContext": true,
+
+			// Префикс для каждого запроса (будет добавляться автоматически)
+			"systemPrompt": "Используй инструкции из файла CODY_CONTEXT.md в корне проекта. Следуй всем правилам и соглашениям, указанным в этом файле.",
+
+			// Файлы с инструкциями, которые нужно читать перед каждым ответом
+			"instructionFiles": ["./CODY_CONTEXT.md"]
+		},
+
+		// Настройки для интеграции с Git
+		"git": {
+			"commitMessageGeneration": {
+				"enabled": true,
+				"useContextFiles": true,
+				"followProjectRules": true
+			}
 		},
 
 		// ========== НАСТРОЙКИ ПРОИЗВОДИТЕЛЬНОСТИ ==========
@@ -350,6 +422,25 @@
 
 			// Кэширование ответов для ускорения работы
 			"responseCache": true
+		},
+
+		// Автоматическое включение контекстных файлов
+		"context": {
+			// Автоматически включать файлы с инструкциями
+			"includeInferredRepository": true,
+
+			// Файлы, которые всегда должны быть включены в контекст
+			"alwaysIncludeFiles": [
+				"./CODY_CONTEXT.md",
+				"./.cody/instructions.md",
+				"./README.md"
+			],
+
+			// Максимальное количество файлов в контексте
+			"maxFiles": 20,
+
+			// Автоматически искать файлы с инструкциями
+			"autoIncludeInstructions": true
 		}
 	},
 
