Перенести контекстные инструкции Cody в папку .cody
- Перемещены файлы CODY_CONTEXT.md и instructions.md в директорию .cody для организации контекста
- Обновлены пути к файлам контекста в settings.json для соответствия новой структуре
- Изменена конфигурация для использования файлов инструкций из папки .cody
- Актуализирован systemPrompt для указания нового местоположения CODY_CONTEXT.md
- Обновлены настройки alwaysIncludeFiles для включения файлов из .cody в контекст

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -239,17 +239,19 @@
 	/*
 		Настройки для AI-ассистента Cody от Sourcegraph
 		
-		ВАЖНО: Часть настроек перенесена в файл `./CODY_CONTEXT.md`
+		ВАЖНО: Контекстные инструкции перенесены в папку `.cody`
 		
-		Причины разделения:
-		1. settings.json - технические настройки VS Code (автодополнение, интерфейс, производительность)
-		2. CODY_CONTEXT.md - контекстные инструкции и правила работы (стиль кода, комментарии, commit сообщения)
+		Структура конфигурации:
+		1. settings.json - технические настройки VS Code (автодополнение, интерфейс, производительность, commit сообщения)
+		2. .cody/CODY_CONTEXT.md - контекстные инструкции и правила работы (стиль кода, комментарии)
+		3. .cody/instructions.md - дополнительные инструкции (опционально)
 		
 		Преимущества такого подхода:
 		- Упрощение конфигурации VS Code (меньше строк в settings.json)
-		- Лучшая читаемость инструкций в отдельном Markdown файле
+		- Лучшая читаемость инструкций в отдельных Markdown файлах
 		- Возможность версионирования правил работы с кодом
 		- Разделение технических настроек и бизнес-логики
+		- Соответствие стандартной структуре .cody директории
 	*/
 	"cody": {
 		// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
@@ -336,8 +338,8 @@
 				// Автоматически включать контекстные файлы при генерации commit
 				"includeContext": true,
 
-				// Файлы с дополнительными инструкциями
-				"contextFiles": ["./CODY_CONTEXT.md", "./.cody/instructions.md"],
+				// Файлы с дополнительными инструкциями (ОБНОВЛЕНО: новый путь)
+				"contextFiles": ["./.cody/CODY_CONTEXT.md", "./.cody/instructions.md"],
 
 				// Анализировать изменения в коде для лучшего понимания
 				"analyzeChanges": true,
@@ -359,10 +361,11 @@
 			"autoLoadContext": true,
 
 			// Префикс для каждого запроса (будет добавляться автоматически)
-			"systemPrompt": "Используй инструкции из файла CODY_CONTEXT.md в корне проекта. Следуй всем правилам и соглашениям, указанным в этом файле.",
+			// ОБНОВЛЕНО: новый путь к файлу инструкций
+			"systemPrompt": "Используй инструкции из файла .cody/CODY_CONTEXT.md в корне проекта. Следуй всем правилам и соглашениям, указанным в этом файле.",
 
 			// Файлы с инструкциями, которые нужно читать перед каждым ответом
-			"instructionFiles": ["./CODY_CONTEXT.md"]
+			"instructionFiles": ["./.cody/CODY_CONTEXT.md"]
 		},
 
 		// Настройки для интеграции с Git
@@ -431,7 +434,7 @@
 
 			// Файлы, которые всегда должны быть включены в контекст
 			"alwaysIncludeFiles": [
-				"./CODY_CONTEXT.md",
+				"./.cody/CODY_CONTEXT.md",
 				"./.cody/instructions.md",
 				"./README.md"
 			],
