Настроить двухуровневую систему контекстных инструкций Cody
- Внедрена двухуровневая система контекстных инструкций для Cody: общие (CODY_CONTEXT.md) и специфичные для проекта (CODY_PROJECT_CONTEXT.md)
- Обновлены настройки в `settings.json` для использования обоих файлов контекста в автодополнении, чате и интеграции с Git
- Добавлен файл `CODY_PROJECT_CONTEXT.md` с правилами и структурой проекта inf.notes
- Установлен приоритет проектных правил (CODY_PROJECT_CONTEXT.md) над общими (CODY_CONTEXT.md) при конфликте настроек

--- a/AppData/Roaming/Code/User/settings.json
+++ b/AppData/Roaming/Code/User/settings.json
@@ -239,19 +239,27 @@
 	/*
 		Настройки для AI-ассистента Cody от Sourcegraph
 		
-		ВАЖНО: Контекстные инструкции перенесены в папку `.cody`
+		ВАЖНО: Контекстные инструкции используют двухуровневую систему
 		
 		Структура конфигурации:
 		1. settings.json - технические настройки VS Code (автодополнение, интерфейс, производительность, commit сообщения)
-		2. .cody/CODY_CONTEXT.md - контекстные инструкции и правила работы (стиль кода, комментарии)
-		3. .cody/instructions.md - дополнительные инструкции (опционально)
+		2. .cody/CODY_CONTEXT.md - ОБЩИЕ контекстные инструкции для всех проектов (базовые правила работы)
+		3. .cody/CODY_PROJECT_CONTEXT.md - СПЕЦИФИЧНЫЕ инструкции для конкретного проекта (приоритетные)
 		
-		Преимущества такого подхода:
+		Преимущества двухуровневой системы:
+		- Единые стандарты кодирования для всех проектов (CODY_CONTEXT.md)
+		- Гибкая настройка под специфику каждого проекта (CODY_PROJECT_CONTEXT.md)
+		- Приоритет проектных правил над общими при конфликте
 		- Упрощение конфигурации VS Code (меньше строк в settings.json)
 		- Лучшая читаемость инструкций в отдельных Markdown файлах
 		- Возможность версионирования правил работы с кодом
 		- Разделение технических настроек и бизнес-логики
 		- Соответствие стандартной структуре .cody директории
+		
+		Порядок применения правил:
+		1. Загружаются общие правила из CODY_CONTEXT.md
+		2. Загружаются специфичные правила из CODY_PROJECT_CONTEXT.md
+		3. При конфликте приоритет у проектных правил
 	*/
 	"cody": {
 		// ========== НАСТРОЙКИ АВТОДОПОЛНЕНИЯ ==========
@@ -339,7 +347,10 @@
 				"includeContext": true,
 
 				// Файлы с дополнительными инструкциями (ОБНОВЛЕНО: новый путь)
-				"contextFiles": [".cody/CODY_CONTEXT.md", ".cody/instructions.md"],
+				"contextFiles": [
+					".cody/CODY_CONTEXT.md",
+					".cody/CODY_PROJECT_CONTEXT.md"
+				],
 
 				// Анализировать изменения в коде для лучшего понимания
 				"analyzeChanges": true,
@@ -361,10 +372,13 @@
 			"autoLoadContext": true,
 
 			// Префикс для каждого запроса (будет добавляться автоматически)
-			"systemPrompt": "Используй инструкции из файла .cody/CODY_CONTEXT.md в корне проекта. Следуй всем правилам и соглашениям, указанным в этом файле.",
+			"systemPrompt": "Используй инструкции из файлов .cody/CODY_CONTEXT.md (общие правила) и .cody/CODY_PROJECT_CONTEXT.md (правила проекта). При конфликте настроек приоритет у правил проекта из CODY_PROJECT_CONTEXT.md.",
 
 			// Файлы с инструкциями, которые нужно читать перед каждым ответом
-			"instructionFiles": [".cody/CODY_CONTEXT.md"]
+			"instructionFiles": [
+				".cody/CODY_CONTEXT.md",
+				".cody/CODY_PROJECT_CONTEXT.md"
+			]
 		},
 
 		// Настройки для интеграции с Git
@@ -434,7 +448,7 @@
 			// Файлы, которые всегда должны быть включены в контекст
 			"alwaysIncludeFiles": [
 				".cody/CODY_CONTEXT.md",
-				".cody/instructions.md",
+				".cody/CODY_PROJECT_CONTEXT.md",
 				"README.md"
 			],
 
