Переименовать каталог AppData в .AppData
- Добавить точку в начало имени каталога для соответствия стандартам
- Обновить настройки YAML схемы для расширения continue в VSCode

--- a/.AppData/Roaming/Code/User/settings.json
+++ b/.AppData/Roaming/Code/User/settings.json
@@ -473,5 +473,10 @@
 		}
 	},
 	"amp.notifications.enabled": false,
-	"amp.commands.allowlist": ["timeout"]
+	"amp.commands.allowlist": ["timeout"],
+	"yaml.schemas": {
+		"c:\\Users\\prof\\.vscode\\extensions\\continue.continue-1.0.15-win32-x64\\config-yaml-schema.json": [
+			".continue/**/*.yaml"
+		]
+	}
 }
